# ps2_emu

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md  conanfile.txt  stbi.h
include/common/: manager.hpp  memmap.hpp
include/cpu/: cop0.hpp  ee.hpp
src/: main.cc  main.cpp
src/common/: component.h  emulator.cc  emulator.h  manager.cc  manager.cpp  manager.h  manager.hpp  memmap.hpp  memory.h  sif.cc  sif.h
src/cpu/: cop0.hpp  ee.cpp  ee.hpp
src/cpu/ee/: cop0.h  cop0.hpp  cop1.cc  cop1.h  dmac.cc  dmac.h  ee.cc  ee.cpp  ee.h  ee.hpp  intc.cc  intc.h  opcode.cc  opcode.h  timers.cc  timers.h
src/cpu/ee/jit/: ir.cc  ir.h  jit.cc  jit.h
src/cpu/iop/: cop0.h  dma.cc  dma.h  intr.cc  intr.h  iop.cc  iop.cpp  iop.h  iop.hpp  timers.cc  timers.h
src/cpu/vu/: common.h  vif.cc  vif.h  vu.cc  vu.h  vu0.cc  vu0.h
src/gs/: gif.cc  gif.h  gs.cc  gs.h  gs_regs.h  gsrenderer.cpp  gsrenderer.h  gsvram.cc  gsvram.h
src/gs/vulkan/: buffer.cc  buffer.h  common.h  context.cc  context.h  texture.cc  texture.h  window.cc  window.h
src/media/: cdvd.cc  cdvd.h  gamepad.cc  gamepad.h  ipu.cc  ipu.h  sio2.cc  sio2.h
src/shaders/: fragment.glsl  vertex.glsl
src/spu/: spu.cc  spu.h
src/utils/: queue.h
tests/: build.sh  display_timing.c
